jss-compiler/tests/parser/invalid/unbalanced_braces.jss
// Erro sintatico: Falta fechar as chaves do bloco do 'if'
function void main() {
    let int x = 10;
    if (x > 5) {
        console.log(x);
    // Falta o '}' do if
}
